# ddd-template

./: .env.example  README.md  client.py  main.py  pyproject.toml  requirements.txt  run.py
application/ai/: __init__.py
application/ai/services/: __init__.py  ai_extraction_service.py
application/commands/mailbox/: __init__.py  add_mailbox_account.py  delete_mailbox_account.py
application/commands/verification/: __init__.py  cancel_wait_request.py  process_email.py  register_wait_request.py
application/handlers/: example_event_handlers.py  example_handlers.py
application/handlers/mailbox/: __init__.py  (+3 more)
application/mail/: __init__.py
application/verification/: __init__.py
domain/: README.md
domain/ai/: __init__.py
domain/common/: exceptions.py
domain/mail/: __init__.py
domain/mailbox/: __init__.py
domain/verification/: __init__.py
examples/: api_example.py  logging_example.py
infrastructure/ai/: __init__.py  llm_verification_extractor.py
infrastructure/chatgpt/: __init__.py  api_client.py
infrastructure/config/: .env.example  settings.py
infrastructure/containers/: __init__.py  application.py  bootstrap.py  config.py  infrastructure.py
infrastructure/database/: __init__.py  database_factory.py  unit_of_work.py
infrastructure/events/: __init__.py
infrastructure/mail/: __init__.py
infrastructure/mailbox/: __init__.py
infrastructure/mediator/: __init__.py
infrastructure/verification/: __init__.py
interfaces/api/: __init__.py  app.py
tests/integration/: test_mailbox_status_tracking.py
tests/interfaces/: __init__.py
(+127 files in other folders)
