[project]
name = "ddd-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.48.2",
    "fastapi>=0.122.0",
    "fastmcp>=2.13.1",
    "loguru>=0.7.3",
    "mediatr>=1.3.2",
    "pydantic-settings>=2.12.0",
    "pyventus>=0.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
